# ecoach

./: ChangeLog  Makefile.am  README  configure.ac
data/: Makefile.am  ec_gpx_ext_v1.xsd  ec_style.rc  ecoach.desktop.in  ecoach.service.in
debian/: changelog  control  copyright  postinst  rules
doc/: Doxyfile
gfx/: Makefile.am
gfx/26x26/: Makefile.am
gfx/scalable/: Makefile.am
m4/: ChangeLog
po/: ChangeLog  Makevars  POTFILES.in  ecoach.pot
src/: CCalendarUtil.cc  CCalendarUtil.h  Makefile.am  activity.c  activity.h  activity_tree.c  activity_tree.h  analyzer.c  analyzer.h  beat_detect.c  beat_detect.h  calculate_bmi.c  calculate_bmi.h  calculate_maxheartrate.c  calculate_maxheartrate.h  dbus_helper.c  dbus_helper.h  debug.h  ec-button-private.h  ec-button.c  ec-button.gob  ec-button.h  ec-progress-private.h  ec-progress.c  ec-progress.gob  ec-progress.h  ec_error.c  ec_error.h  ecg_data.c  ecg_data.h  ecg_view.c  ecg_view.h  gconf_helper.c  gconf_helper.h  gconf_keys.h  general_settings.c  general_settings.h  gpx.c  gpx.h  gpx_defs.h  (+33 more)
src/map_widget/: ChangeLog  map_widget.c  map_widget.h  map_widget_defs.h
src/osea/: ChangeLog  bdac.c  bdac.h  qrsdet.h  rythmchk.c
src/osm_gps_map/: osm-gps-map-types.h  osm-gps-map.c  osm-gps-map.h
