SUBDIRS = 26x26 scalable

gfxdir = $(datadir)/pixmaps/ecoach
gfx_DATA =							\
	menu_analysis_btn.png					\
	menu_back_btn_icon.png					\
	menu_generic_btn.png					\
	menu_log_btn.png					\
	menu_new_btn.png					\
	menu_settings_btn.png					\
	ec_button_change_view_bg.png				\
	ec_button_generic.png					\
	ec_button_pause.png					\
	ec_button_play.png					\
	ec_button_stop.png					\
	ec_button_small_bg.png					\
	ec_button_small_bg_down.png				\
	ec_icon_altitude.png					\
	ec_icon_arrow_left.png					\
	ec_icon_arrow_right.png				\
	ec_icon_autocenter_on.png				\
	ec_icon_autocenter_off.png				\
	ec_icon_heart_green.png				\
	ec_icon_heart_grey.png					\
	ec_icon_heart_rate.png					\
	ec_icon_heart_red.png					\
	ec_icon_heart_yellow.png				\
	ec_icon_track_next.png					\
	ec_icon_track_prev.png					\
	ec_icon_open.png					\
	ec_icon_speed.png					\
	ec_titlebar_background.png				\
	ec_titlebar_breadcrumb_analysis_btn.png		\
	ec_titlebar_breadcrumb_home_btn.png			\
	ec_titlebar_breadcrumb_log_btn.png			\
	ec_titlebar_breadcrumb_new_btn.png			\
	ec_titlebar_breadcrumb_settings_btn.png		\
	ec_titlebar_close_btn.png				\
	ec_titlebar_minimize_btn.png				\
	ec_widget_generic_big_background.png			\
	ec_widget_generic_big_progressbar_background.png	\
	ec_widget_generic_big_progressbar_fill.png		\
	ec_widget_generic_small_background.png			\
	ec_widget_map_background_bottom.png			\
	ec_widget_map_background_bottomleft.png		\
	ec_widget_map_background_bottomright.png		\
	ec_widget_map_background_left.png			\
	ec_widget_map_background_right.png			\
	ec_widget_map_background_top.png			\
	ec_widget_map_background_topleft.png			\
	ec_widget_map_background_topright.png			\
	ec_widget_map_down_btn.png				\
	ec_widget_map_left_btn.png				\
	ec_widget_map_right_btn.png				\
	ec_widget_map_up_btn.png				\
	ec_widget_map_zoom_in_btn.png				\
	ec_widget_map_zoom_out_btn.png

EXTRA_DIST = $(gfx_DATA)
